--- a/angular.json
+++ b/angular.json
@@ -117,6 +117,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "buildTarget": "test:build:production"
+          }
         }
       }
     }
