--- a/angular.json
+++ b/angular.json
@@ -119,10 +119,7 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy",
-          "options": {
-            "buildTarget": "test:build:production"
-          }
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
